# fastsignal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.cpp  fastsignal.hpp  fastsignal_bench_g.cpp  fastsignal_benchmark.cpp  fastsignal_example.cpp  fastsignal_test.cpp  simplesignal.hpp  test_simplesignal.cpp
benchmarks/: CMakeLists.txt  bench_base.hpp  fastsignal_cbench.cpp  fastsignal_gbench.cpp  fastsignal_memory.cpp  fastsignal_nbench.cpp
examples/: CMakeLists.txt  fastsignal_examples.cpp
simple_sig_p/: simplesignal.hpp
tests/: CMakeLists.txt  fastsignal_tests.cpp
